2012-05-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20101013-1.c:
	  Disable test until nonzero integer constants work.

2012-05-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCval.h,
	* src/SDCCval.c (byteOfVal): new function
	* src/z80/gen.c (aopGet, gencjneshort),
	* src/SCCglue.c (aopLiteralLong): use byteOfVal() to access value
	* configure.in,
	* sdcc_vc_in.h,
	* sdccconf_in.h: find/define appropriate 64-bit integer
	* src/SDCCsymt.h: start of support for 64-bit literal

2012-04-30 Leland Morrison <enigmalee AT sourceforge.net>
	* sim/ucsim/app.cc:  reduced the frequency of checks for user input
	
2012-04-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve code generation for comparison to zero.

2012-04-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/librarian/sdcclib.c:
	  Do not depend on PATH_MAX, fix #3521650.
	* sdas/asxxsrc/asxxxx.h:
	  Use FILENAME_MAX if PATH_MAX is not defined.

2012-04-25 Borut Razem <borut.razem AT gmail.com>

	* src/common.h, src/ds390/main.c: include SDCCsystem.h in common.h
	* src/SDCCmain.c: added newline at end of file
	* src/SDCCicode.c: use TRUE instead of undefined true
	* src/SDCCicode.h: fixed declaration of isOperandLiteral()

2012-04-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-gbz80.def:
	  Removed peephole that resulted in invalid or operand on gbz80.

2012-04-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix #3521024.

2012-04-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c,
	  src/SDCCopt.c,
	  src/z80/gen.c:
	  GET_VALUE_AT_ADDRESS with offset for z80, z180 and r2k.

2012-04-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c: